--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,11 @@ dependencies = [
     "uvicorn>=0.20.0",
     "sse-starlette>=1.6.0",
     "python-multipart>=0.0.6",
+    "gTTS>=2.3.0",
+    "playwright>=1.40.0",
+    "PyYAML>=6.0.0",
+    "SpeechRecognition>=3.10.0",
+    "PyAudio>=0.2.13",
 ]
 
 [project.optional-dependencies]
