--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ dependencies = [
     "PyYAML>=6.0.0",
     "SpeechRecognition>=3.10.0",
     "PyAudio>=0.2.13",
+    "pyperclip>=1.8.0",
 ]
 
 [project.optional-dependencies]
